--- a/main.html
+++ b/main.html
@@ -290,7 +290,8 @@
         <p id="faq_enfant_rep3"><p>
       </details>
     </div>
-    <div cla id="faq_divers_titre"></h3>
+    <div class="faq-category"></div>
+      <h3 id="faq_divers_titre"></h3>
       <details class="faq-item">
         <summary id="faq_divers_quest1"></summary>
         <p id="faq_divers_rep1"><p>
