--- a/rsvp.html
+++ b/rsvp.html
@@ -71,10 +71,10 @@
     <!-- PRÉSENCE -->
     <h2 id="rsvp_presence"></h2> 
     <div class="radio-group">
-        <label><input type="radio" name="entry.279183771" value="vendredi" id="rsvp_presence_rep1"></label>
-        <label><input type="radio" name="entry.279183771" value="semdi + dimanche" id="rsvp_presence_rep2"></label>
-        <label><input type="radio" name="entry.279183771" value="samedi" id="rsvp_presence_rep3"></label>
-        <label><input type="radio" name="entry.279183771" value="absent" id="rsvp_presence_rep4"></label>
+        <label id="rsvp_presence_rep1"><input type="radio" name="entry.279183771" value="vendredi" ></label>
+        <label id="rsvp_presence_rep2"><input type="radio" name="entry.279183771" value="semdi + dimanche"></label>
+        <label id="rsvp_presence_rep3"><input type="radio" name="entry.279183771" value="samedi" ></label>
+        <label id="rsvp_presence_rep4"><input type="radio" name="entry.279183771" value="absent" ></label>
     </div>
      <div class="input-group textarea-container">
         <label id="rsvp_presence_commentaire"></label>
