--- a/rsvp.html
+++ b/rsvp.html
@@ -97,25 +97,25 @@
     </div>
 
     <div class="input-group textarea-container">
-        <label>Commentaire :</label>
+        <label id="rsvp_heberg_com"></label>
         <textarea class="textarea" name="entry.357053061"></textarea>
     </div>
 
-    <h2>Musique</h2>
-    <p>Si vous ne voulez pas entendre du Disney toute la nuit, n'hésitez pas à nous faire part de votre titre incontournable pour une bonne soirée.</p>
+    <h2 id="rsvp_music"></h2>
+    <p id="rsvp_music_cont"></p>
     <input type="text" class="small-input" name="entry.835506396">
 
     <!-- MATOS BÉBÉ -->
-    <h2>Matériel bébé</h2>
+    <h2 id="rsvp_bebe"></h2>
     <div class="radio-group">
-        <label><input type="checkbox" name="entry.609603144" value="lit"> J'ai besoin d'un lit pour bébé</label>
-        <label><input type="checkbox" name="entry.609603144" value="chaise"> J'ai besoin d'une chaise haute pour bébé<label>
+        <label id="rsvp_bebe_rep1"><input type="checkbox" name="entry.609603144" value="lit"></label>
+        <label id="rsvp_bebe_rep2"><input type="checkbox" name="entry.609603144" value="chaise"><label>
     </div>
 
-    <button type="submit" class="btn-submit">Envoyer</button>
+    <button type="submit" class="btn-submit" id="rsvp_reponse"></button>
   </form>
 
-  <p class="google-text">Les réponses seront enregistrées via Google Forms.</p>
+  <p class="google-text" id="rsvp_validation"></p>
 </section>
 
 
