--- a/rsvp.html
+++ b/rsvp.html
@@ -88,13 +88,33 @@
 
     <!-- HÉBERGEMENT -->
     <h2 id="rsvp_heberg"></h2>
-    <div class="radio-group">
-        <label id="rsvp_heberg_rep1"><input type="radio" name="entry.667456340" value="tente sur palce"></label>
-        <label id="rsvp_heberg_rep2"><input type="radio" name="entry.667456340" value="chambre hotel"></label>
-        <label id="rsvp_heberg_rep3"><input type="radio" name="entry.667456340" value="mes myoen">J</label>
-        <label id="rsvp_heberg_rep4"><input type="radio" name="entry.667456340" value="je veux une tente"></label>
-        <label id="rsvp_heberg_rep5"><input type="radio" name="entry.667456340" value="dormir pk?"></label>
-    </div>
+      <div class="radio-group">
+          <label id="rsvp_heberg_rep1">
+              <input type="radio" name="entry.667456340" value="tente sur place">
+              <span class="label-text"></span>
+          </label>
+
+          <label id="rsvp_heberg_rep2">
+              <input type="radio" name="entry.667456340" value="chambre hotel">
+              <span class="label-text"></span>
+          </label>
+
+          <label id="rsvp_heberg_rep3">
+              <input type="radio" name="entry.667456340" value="mes moyens">
+              <span class="label-text"></span>
+          </label>
+
+          <label id="rsvp_heberg_rep4">
+              <input type="radio" name="entry.667456340" value="je veux une tente">
+              <span class="label-text"></span>
+          </label>
+
+          <label id="rsvp_heberg_rep5">
+              <input type="radio" name="entry.667456340" value="dormir pk?">
+              <span class="label-text"></span>
+          </label>
+      </div>
+
 
     <div class="input-group textarea-container">
         <label id="rsvp_heberg_com"></label>
