--- a/main.html
+++ b/main.html
@@ -173,11 +173,13 @@
           <p class="information-titre" style="font-weight: bold;" id="info_trans_2titre"><br></p>
           <p class="information-cont" id="info_trans_2cont"><br><br></p>
 
+
+
         <br><h2 class="information-titre-main" id="info_logement_titre"></h2>
 
           <br><p class="information-intro" id="info_logement_intro"></p>
 
-          <p class="information-titre" style="font-weight: bold;"></p>
+          <p class="information-titre" style="font-weight: bold;" id="info_logement_1titre"></p>
             <p class="information-cont" id="info_logement_1cont"><br><br></p>
           
           <p class="information-titre" style="font-weight: bold;" id="info_logement_2titre"></p>
