--- a/rsvp.html
+++ b/rsvp.html
@@ -27,9 +27,9 @@
       <div class="dropdown-langue">
         <button class="btn-langue" id="nav_langue"></button>
         <div class="dropdown-content">
-          <a href="main.html">Français</a>
-          <a href="English.html">English</a>
-          <a href="Deutsch.html">Deutsch</a>
+          <a href="#" onclick="setLang('fr'); return false;">Français</a>
+          <a href="#" onclick="setLang('en'); return false;">English</a>
+          <a href="#" onclick="setLang('de'); return false;">Deutsch</a>
         </div>
       </div>
     </div>
