--- a/main.html
+++ b/main.html
@@ -185,7 +185,7 @@
           <p class="information-titre" style="font-weight: bold;" id="info_logement_2titre"></p>
               <p class="information-cont" id="info_logement_2cont"></p>
           <p class="information-titre" style="font-weight: bold;" id="info_logement_3titre"></p>
-            <p class="information_3cont"></p>
+            <p class="information-cont" id="info_logement_3cont"></p>
 
           <p class="information-titre" style="font-weight: bold;" id="info_logement_4titre"></p>
             <p class="information-cont" id="info_logement_4cont"></p>
