--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <script>
     (function(){
       // ✅ Change these values if you want a different secret or destination.
-      const SECRET = 'letmein'; // <-- change password here
+      const SECRET = 'ohana'; // <-- change password here
 
       const pw = document.getElementById('pw');
       const check = document.getElementById('check');
