--- a/main.html
+++ b/main.html
@@ -42,11 +42,11 @@
 </nav>
 
 
-  <!-- Section Hero -->
+  <!-- Section Hero  font-size: clamp(2rem, 4vw, 4rem) -->
   <section class="section-bg hero" style="background-image: url('image/main.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center; height: 90vh;">
     <div class="overlay-text">
       <p id="countdown" class="countdown" style="margin-bottom: 10%">00 : 00 : 00 : 00></p>
-      <h1 style="margin-bottom: 10% ; font-size: clamp(2rem, 3.5vw, 3.4rem)">ANNIK & JOAQUIM</h1>
+      <h1 style="margin-bottom: 10% ;">ANNIK & JOAQUIM</h1>
       <p id="acc_date" class="date" style="margin-bottom: 5%"></p>
       <p class="lieu" style="margin-bottom: 2%">Berghotel Chäserstatt</p>
     </div>
