--- a/main.html
+++ b/main.html
@@ -45,10 +45,10 @@
   <!-- Section Hero  font-size: clamp(2rem, 4vw, 4rem) -->
   <section class="section-bg hero" style="background-image: url('image/main.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center; height: 90vh;">
     <div class="overlay-text">
-      <p id="countdown" class="countdown" style="margin-bottom: 10%">00 : 00 : 00 : 00></p>
-      <h1 style="margin-bottom: 10% ;">ANNIK & JOAQUIM</h1>
-      <p id="acc_date" class="date" style="margin-bottom: 5%"></p>
-      <p class="lieu" style="margin-bottom: 2%">Berghotel Chäserstatt</p>
+      <p id="countdown" class="countdown" style="margin-bottom: 10% clamp(1.8rem, 5vw, 4rem)">00 : 00 : 00 : 00></p>
+      <h1 style="margin-bottom: 10% ; clamp(1.8rem, 5vw, 4rem) ">ANNIK & JOAQUIM</h1>
+      <p id="acc_date" class="date" style="margin-bottom: 5%; clamp(1.8rem, 5vw, 4rem)"></p>
+      <p class="lieu" style="margin-bottom: 2%; font-size: clamp(1.8rem, 5vw, 4rem)">Berghotel Chäserstatt</p>
     </div>
   </section>
 
@@ -77,7 +77,7 @@
       <p style="margin-bottom: 0%" id="date_quand"></p>
       <p  style="margin-bottom: 5%" id="date_quandrep"></p>
       <p style="margin-bottom: 0%" id="date_ou"></p>
-      <p style="margin-bottom: 2.5rem" id="date_ourep"></p><br>
+      <p style="margin-bottom: 2.5rem" id="date_ourep"></p>
       <!-- 
       <div style="text-align: left; margin-left: 10%;margin-bottom: 2.5rem; font-size: 1.3rem;">
         <p>Date</p><br>
