--- a/main.html
+++ b/main.html
@@ -153,8 +153,13 @@
   </section>
 
   <!-- Demande -->
-  <section id="demande" class="section-bg demande" id="lademande" >
-    <div class="histoire-contenu" id="lademande_text" ></div>
+  <section id="demande" class="section-bg demande" >
+
+    <div class="histoire-contenu">
+      <h1 class="information-titre-main"  id="lademande"></h1>
+      <h2 class="information-intro" id="lademande_text"></h2>
+
+    </div>
     <div><video controls width="640">
       <source src="video/demande.mp4" type="video/mp4">
     </video>
