--- a/main.html
+++ b/main.html
@@ -157,7 +157,7 @@
 
     <div class="histoire-contenu">
       <h1 class="information-titre-main"  id="lademande"></h1>
-      <h2 class="information-intro" id="lademande_text"></h2>
+      <p class="information-intro" id="lademande_text"></p>
 
     </div>
     <div><video controls width="640">
