--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 
 
   <!-- Section Hero  font-size: clamp(2rem, 4vw, 4rem) -->
-  <section class="section-bg hero" style="background-image: url('image/main.jpg'); background-size: contain; background-size: cover; background-repeat: no-repeat; background-position: center; height: 90vh;">
+  <section class="section-bg hero" style="background-image: url('image/main.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center; height: 90vh;">
     <div class="overlay-text">
       <p id="countdown" class="countdown" style="margin-bottom: 20%;  padding: 2rem; font-size: clamp(1rem, 4vw, 3rem);">00 : 00 : 00 : 00></p>
       <h1 style="margin-bottom: 15% ; font-size: clamp(1.5rem, 7vw, 5rem) ;padding: 2rem;">ANNIK & JOAQUIM</h1>
@@ -158,10 +158,9 @@
     <div class="histoire-contenu">
       <h1 class="information-titre-main"  id="lademande"></h1>
       <p class="information-intro" id="lademande_text"></p>
-style="width: 100%; height: auto
     </div>
     <div style="margin-bottom: 3%">
-      <video controls width="640" style="width: 100%; height: auto; margin-bottom: 3%">
+      <video controls width="640" style="width: 50%; height: auto; margin-bottom: 3%">
       <source src="video/demande.mp4" type="video/mp4">
       </video>
     </div>
