--- a/main.html
+++ b/main.html
@@ -46,8 +46,8 @@
   <section class="section-bg hero" style="background-image: url('image/main.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center; height: 90vh;">
     <div class="overlay-text">
       <p id="countdown" class="countdown" style="margin-bottom: 20%;  padding: 2rem; font-size: clamp(1rem, 4vw, 3rem);">00 : 00 : 00 : 00></p>
-      <h1 style="margin-bottom: 15% ; font-size: clamp(1.5rem, 7vw, 5rem) ;max-width: fit-content;">ANNIK & JOAQUIM</h1>
-      <p id="acc_date" class="date" style="margin-bottom: 5%; font-size: clamp(1rem, 4vw, 3rem) ;max-width:33%"></p>
+      <h1 style="margin-bottom: 15% ; font-size: clamp(1.5rem, 7vw, 5rem) ;max-width: 50%;">ANNIK & JOAQUIM</h1>
+      <p id="acc_date" class="date" style="margin-bottom: 5%; font-size: clamp(1rem, 4vw, 3rem) ;max-width:100%"></p>
       <p class="lieu" style="margin-bottom: 2%; font-size: clamp(1em, 4vw, 3rem);padding: 2rem;">Berghotel Chäserstatt</p>
     </div>
   </section>
