--- a/main.html
+++ b/main.html
@@ -42,12 +42,12 @@
 </nav>
 
 
-  <!-- Section Hero id="acc_date" font-size: clamp(2rem, 4vw, 4rem) -->
+  <!-- Section Hero  font-size: clamp(2rem, 4vw, 4rem) -->
   <section class="section-bg hero" style="background-image: url('image/main.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center; height: 90vh;width:auto;">
     <div class="overlay-text">
       <p id="countdown" class="countdown" style="margin-bottom: 20%;  padding: 2rem; font-size: clamp(1rem, 4vw, 2.5rem);">00 : 00 : 00 : 00></p>
       <h1 style="margin-bottom: 15% ; font-size: clamp(1.5rem, 7vw, 3rem) ;max-width: 100%;">ANNIK & JOAQUIM</h1>
-      <p  class="date" style="margin-bottom: 5%; font-size: clamp(1rem, 4vw, 2.5rem) ;max-width:100%">8th and 9th August 2026</p>
+      <p  id="acc_date" class="date" style="margin-bottom: 5%; font-size: clamp(1rem, 4vw, 2.5rem) ;max-width:100%"></p>
       <p class="lieu" style="margin-bottom: 2%; font-size: clamp(1em, 4vw, 2.5rem);padding: 2rem;">Berghotel Chäserstatt</p>
     </div>
   </section>
