--- a/histoire.html
+++ b/histoire.html
@@ -76,7 +76,7 @@
       
     <div class="chapitre">
        <div class="chapitre-content">
-          <h2 id="chap3_titre"></h2>
+          <h2 class="no-justify"  id="chap3_titre"></h2>
       <p id="chap3_cont"></div>
     <div class="images-column">
         <img src="image/ch3.jpg" alt="Université" class="image2-chapitre">
