--- a/rsvp.html
+++ b/rsvp.html
@@ -72,7 +72,7 @@
     <h2 id="rsvp_presence"></h2> 
     <div class="radio-group">
         <label id="rsvp_presence_rep1"><input type="radio" name="entry.279183771" value="vendredi" required><span class="label-text"></span></label>
-        <label id="rsvp_presence_rep2"><input type="radio" name="entry.279183771" value="semdi + dimanche"required><span class="label-text"></span></label>
+        <label id="rsvp_presence_rep2"><input type="radio" name="entry.279183771" value="samedi + dimanche"required><span class="label-text"></span></label>
         <label id="rsvp_presence_rep3"><input type="radio" name="entry.279183771" value="samedi" required><span class="label-text"></span></label>
         <label id="rsvp_presence_rep4"><input type="radio" name="entry.279183771" value="absent"required ><span class="label-text"></span></label>
     </div>
